# unemploymentsimulator

./: .gitignore  ASSETS_RESEARCH.md  CHANGELOG.md  MASTERPLAN.md  README.md  WALKTHROUGH.md  char_page.html  next.config.ts  package.json  page.html  search.html  worklog.md
.github/workflows/: build-release.yml
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md  game-description.md  inventur_spec.md
.specify/workflows/: workflow-registry.json
download/: latest.json
godot/: .gitignore  README.md  project.godot
godot/assets/: README.md
godot/scenes/: EndScreen.tscn  GameScene.tscn  MainMenu.tscn
scripts/: fix_districts_const.py  fix_vehicle_steering.py  fix_worldbuilder_indent.py  generate_heightmap.py  patch_5_issues.py  patch_chars.py  patch_d45a_phase1.py  patch_d45a_phase2.py  patch_d45a_phase3.py  patch_fix2.py  patch_fix3.py  patch_fix_wheels_sidewalk.py  patch_glitch_fix.py  patch_heightmap_loader.py  patch_island_districts.py  patch_issues_v4.py  patch_issues_v4_part2.py  patch_map_layout.py  patch_map_v2.py  patch_npc.py  patch_pi_rotation.py  patch_proper_physics.py  patch_ramp_collision.py  patch_ramp_v2.py  patch_ramp_v3.py  patch_real_physics.py  patch_scales.py  patch_sidewalk_simple.py  patch_vehicle_physics.py  patch_vehicle_wheels.py
src-tauri/: Cargo.toml  latest.json.template  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tauri-build/: README.md
tool-results/: read_1782404850069_7363ff9243df.txt
(+65 files in other folders)
