[package]
name = "unemployment-simulator"
version = "0.5.3"
description = "Make $1M without getting a job. Avoid McDonald's."
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "unemployment_simulator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
